fixed zoom bug on small monitors, fixed duplicate chairs appearing on quantity screen, fixed locked in wood seat for chairs

--- a/wp-content/themes/premise/style.css
+++ b/wp-content/themes/premise/style.css
@@ -14,6 +14,11 @@ Tags: customizable, template, framework, cms, example, premise
 @import url('css/jason.css');
 @import url('css/ted.css');
 
+@media screen and (max-width: 720px) {
+    html {
+        zoom: .65;}
+}
+
 /* =============================================================================
    Base Resets
    ========================================================================== */
